@@ -9,6 +9,8 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Fixed a few failing tests in tests/test_handlers.py.  (LP: #1262950)
+
     - Fixed bin/arch to not create scrubbed attachments for messages skipped
       when processing the --start= option.  (LP: #1260883)
 
